[gd_scene load_steps=10 format=2]

[ext_resource path="res://AnimationAssets/aswang.png" type="Texture" id=1]
[ext_resource path="res://CustomerSceneScripts/aswang-cust.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 20 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "angry"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30, 59 ]
}

[sub_resource type="Animation" id=5]
resource_name = "angrywalk"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=6]
resource_name = "atk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90, 103 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 9 )

[node name="Aswang-enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["customers"]]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )
hframes = 30
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/RESET = SubResource( 3 )
anims/angry = SubResource( 4 )
anims/angrywalk = SubResource( 5 )
anims/atk = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="KineCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
